Fixed issue where text was overflowing and the header wasn't stretching properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Raleway&display=swap');
 
-/* Main */
-
 body {
     font-family: 'Raleway', sans-serif;
     margin: 0;
     background-color: rgb(32, 32, 31);
     color: white;
+    max-width: 100%;
+    
+}
+
+/* Main */
+
+main{
+    padding: 10px 30px;
 }
 
 h1,
@@ -17,25 +23,37 @@ h3 {
     color: rgb(224, 192, 5)
 }
 
+img {
+    max-width: 100%;
+}
+
 /* Header */
 
 #header {
+    margin: 0;
+    padding: 0;
     background: url('../images/banner.jpg') center center / cover no-repeat;
-    min-width: 100%;
+    width: 100%;
     height: 35vh;
     display: flex;
     justify-content: center;
+    vertical-align: center;
 }
 
 .page-header {
     color: rgb(255, 253, 253);
     text-align: center;
     text-transform: uppercase;
-    font-size: xx-large;
-    vertical-align: center;
-    gap: 1rem;
+    text-shadow: 1 1 1 1;
+    overflow: hidden;
+    background-color: rgba(32,32,32, .5);
+    max-width: 100%;
 }
 
 header > div > h1 {
     color: black;
+}
+
+header > div > p {
+    text-decoration: underline;
 }
